WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208144
Assertion failed: currentSchema == createV1ObjectStoreInfoSchema(objectStoreInfoTableName) || currentSchema == createV1ObjectStoreInfoSchema(objectStoreInfoTableNameAlternate)
https://bugs.webkit.org/show_bug.cgi?id=208144
Summary
Assertion failed: currentSchema == createV1ObjectStoreInfoSchema(objectStoreI...
Sihui Liu
Reported
2020-02-24 10:43:47 PST
Replace the release assertion to release logging to gather information about the bug. Crashing network process for failing to open a database seems too aggressive.
Attachments
Patch
(2.31 KB, patch)
2020-02-24 10:51 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2020-02-24 10:44:20 PST
<
rdar://problem/59687897
>
Sihui Liu
Comment 2
2020-02-24 10:51:14 PST
Created
attachment 391557
[details]
Patch
Ryosuke Niwa
Comment 3
2020-02-24 19:11:54 PST
Comment on
attachment 391557
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=391557&action=review
> Source/WebCore/Modules/indexeddb/server/SQLiteIDBBackingStore.cpp:692 > - RELEASE_ASSERT(currentSchema == createV1ObjectStoreInfoSchema(objectStoreInfoTableName) || currentSchema == createV1ObjectStoreInfoSchema(objectStoreInfoTableNameAlternate)); > + if (currentSchema != createV1ObjectStoreInfoSchema(objectStoreInfoTableName) && currentSchema != createV1ObjectStoreInfoSchema(objectStoreInfoTableNameAlternate)) {
Don't we also want to log objectStoreInfoTableName and objectStoreInfoTableNameAlternate?
Sihui Liu
Comment 4
2020-02-25 08:53:36 PST
(In reply to Ryosuke Niwa from
comment #3
)
> Comment on
attachment 391557
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=391557&action=review
> > > Source/WebCore/Modules/indexeddb/server/SQLiteIDBBackingStore.cpp:692 > > - RELEASE_ASSERT(currentSchema == createV1ObjectStoreInfoSchema(objectStoreInfoTableName) || currentSchema == createV1ObjectStoreInfoSchema(objectStoreInfoTableNameAlternate)); > > + if (currentSchema != createV1ObjectStoreInfoSchema(objectStoreInfoTableName) && currentSchema != createV1ObjectStoreInfoSchema(objectStoreInfoTableNameAlternate)) { > > Don't we also want to log objectStoreInfoTableName and > objectStoreInfoTableNameAlternate?
objectStoreInfoTableName and objectStoreInfoTableNameAlternate are constants.
WebKit Commit Bot
Comment 5
2020-02-25 09:37:58 PST
Comment on
attachment 391557
[details]
Patch Clearing flags on attachment: 391557 Committed
r257361
: <
https://trac.webkit.org/changeset/257361
>
WebKit Commit Bot
Comment 6
2020-02-25 09:38:00 PST
All reviewed patches have been landed. Closing bug.
Ryosuke Niwa
Comment 7
2020-02-25 15:28:33 PST
(In reply to Sihui Liu from
comment #4
)
> (In reply to Ryosuke Niwa from
comment #3
) > > Comment on
attachment 391557
[details]
> > Patch > > > > View in context: > >
https://bugs.webkit.org/attachment.cgi?id=391557&action=review
> > > > > Source/WebCore/Modules/indexeddb/server/SQLiteIDBBackingStore.cpp:692 > > > - RELEASE_ASSERT(currentSchema == createV1ObjectStoreInfoSchema(objectStoreInfoTableName) || currentSchema == createV1ObjectStoreInfoSchema(objectStoreInfoTableNameAlternate)); > > > + if (currentSchema != createV1ObjectStoreInfoSchema(objectStoreInfoTableName) && currentSchema != createV1ObjectStoreInfoSchema(objectStoreInfoTableNameAlternate)) { > > > > Don't we also want to log objectStoreInfoTableName and > > objectStoreInfoTableNameAlternate? > > objectStoreInfoTableName and objectStoreInfoTableNameAlternate are constants.
Ah, ok.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug